@@ -15,13 +15,26 @@ fi
 
 
 crs () {
-    ../configrun-sid $@
+    ../configrun-sid $@ >/dev/null
 }
 
 mvic() {
-    mv -f $1 $srcdir/$2
+    if [ ! -f $1 ]; then
+	echo "$1 does not exist!" 1>&2
+	exit 1
+    elif [ ! -f $srcdir/$2 ]; then
+	mv -f $1 $srcdir/$2
+    else
+	sum1=`cat $1 | grep -v "^#" | sum`
+	sum2=`cat $srcdir/$2 | grep -v "^#" | sum`
+	if [ "$sum1" != "$sum2" ]; then
+	    mv -f $1 $srcdir/$2
+	    echo "$2 updated."
+	else
+	    echo "$2 effectively unchanged."
+	fi
+    fi
 }
-
 
 
 crs --cpu=arm --no-run --gdb=5000 -EL
